option('libgd-gtk-hacks',        type: 'boolean', value: false)
option('libgd-main-icon-view',   type: 'boolean', value: false)
option('libgd-main-list-view',   type: 'boolean', value: false)
option('libgd-main-view',        type: 'boolean', value: false)
option('libgd-main-toolbar',     type: 'boolean', value: false)
option('libgd-header-bar',       type: 'boolean', value: false)
option('libgd-header-button',    type: 'boolean', value: false)
option('libgd-margin-container', type: 'boolean', value: false)
option('libgd-notification',     type: 'boolean', value: false)
option('libgd-revealer',         type: 'boolean', value: false)
option('libgd-static',           type: 'boolean', value: false)
option('libgd-gir',              type: 'boolean', value: false)
option('libgd-vapi',             type: 'boolean', value: false)
